💄 Design: 변수명 추천 디자인 변경

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,6 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #151515;
-  color: #fff;
+  background-color: #EAEBEF;
+  color: #A5A6AA;
 }
